--- a/po/tr.po
+++ b/po/tr.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2010-03-27 15:20+0100\n"
-"PO-Revision-Date: 2011-01-09 13:19+0000\n"
-"Last-Translator: Emre Ayca <Unknown>\n"
+"PO-Revision-Date: 2011-01-27 08:04+0000\n"
+"Last-Translator: Onur ALTINTAŞI <Unknown>\n"
 "Language-Team: Turkish <tr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Launchpad-Export-Date: 2011-01-10 05:26+0000\n"
-"X-Generator: Launchpad (build Unknown)\n"
+"X-Launchpad-Export-Date: 2011-01-28 04:48+0000\n"
+"X-Generator: Launchpad (build 12177)\n"
 
 #: GTG/tools/dates.py:51
 msgid "Today"
@@ -348,7 +348,7 @@ msgstr "Yapılmadı olarak işaretle"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:28
 msgid "Mark as _Done"
-msgstr ""
+msgstr "_Yapıldı olarak işaretle"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:29
 msgid "New Subtask"
@@ -528,11 +528,11 @@ msgstr "Başlık"
 
 #: GTG/taskbrowser/tasktree.py:359
 msgid "Start date"
-msgstr ""
+msgstr "Başlangıç tarihi"
 
 #: GTG/taskbrowser/tasktree.py:371
 msgid "Due"
-msgstr ""
+msgstr "Bitiş"
 
 #: GTG/taskbrowser/tasktree.py:494
 msgid "Closing date"
@@ -548,6 +548,9 @@ msgid ""
 "href=\"http://bugs.edge.launchpad.net/gtg\">our Launchpad page</a>. If you "
 "have Apport installed, it will be started for you."
 msgstr ""
+" çöktü. Lütfen <a href=\"http://bugs.edge.launchpad.net/gtg\">Launchpad "
+"sayfamıza</a> çöküş raporu ekleyin. Sisteminizde Apport yüklü ise, şimdi "
+"sizin için başlatılacak."
 
 #: GTG/core/task.py:53
 msgid "My new task"
