--- a/AUTHORS
+++ b/AUTHORS
@@ -73,3 +73,4 @@ For 0.3:
 * Jonathan Barnoud <jonathan@barnoud.net>
 * Daniel Neel <dneelyep@gmail.com>
 * Ivan Evtukhovich <evtuhovich@gmail.com>
+* Madhumitha Viswanathan <madhuvishy@gmail.com>
