--- a/po/de.po
+++ b/po/de.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2011-08-12 11:38+0200\n"
-"PO-Revision-Date: 2010-11-09 19:21+0000\n"
-"Last-Translator: cmdrhenner <cmdrhenner@gmail.com>\n"
+"PO-Revision-Date: 2011-08-16 10:28+0000\n"
+"Last-Translator: Michael Keppler <Bananeweizen@gmx.de>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2011-08-13 04:53+0000\n"
-"X-Generator: Launchpad (build 13674)\n"
+"X-Launchpad-Export-Date: 2011-08-17 04:42+0000\n"
+"X-Generator: Launchpad (build 13697)\n"
 
 #: GTG/plugins/notification_area/notification_area.py:95
 msgid "_View Main Window"
@@ -1053,7 +1053,7 @@ msgstr[1] "%(tasks)d aktive Aufgaben"
 
 #: GTG/gtk/browser/__init__.py:34 GTG/gtk/editor/__init__.py:31
 msgid "Mark as done"
-msgstr "Aufgabe als erledigt markieren"
+msgstr "Erledigt markieren"
 
 #: GTG/gtk/browser/__init__.py:35
 msgid "Mark the selected task as done"
@@ -1061,7 +1061,7 @@ msgstr "Ausgewählte Aufgabe als erledigt markieren"
 
 #: GTG/gtk/browser/__init__.py:36 GTG/gtk/editor/__init__.py:32
 msgid "Mark as not done"
-msgstr "Aufgabe als unerledigt markieren"
+msgstr "Unerledigt markieren"
 
 #: GTG/gtk/browser/__init__.py:37 GTG/gtk/browser/__init__.py:41
 msgid "Mark the selected task as to be done"
@@ -1378,11 +1378,11 @@ msgstr "Neue Aufgabe"
 
 #: GTG/gtk/editor/__init__.py:38
 msgid "Mark this task as done"
-msgstr "Als erledigt markieren"
+msgstr "Erledigt"
 
 #: GTG/gtk/editor/__init__.py:39 GTG/gtk/editor/__init__.py:41
 msgid "Mark this task as to be done"
-msgstr "Als unerledigt markieren"
+msgstr "Unerledigt"
 
 #: GTG/gtk/editor/__init__.py:40
 msgid "Mark this task as not to be done anymore"
@@ -1422,7 +1422,7 @@ msgstr "Später"
 
 #: GTG/gtk/editor/taskeditor.glade.h:8
 msgid "Mark Done"
-msgstr "Als erledigt markieren"
+msgstr "Erledigt"
 
 #: GTG/gtk/editor/taskeditor.glade.h:9
 msgid "Now"
