--- a/po/it.po
+++ b/po/it.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2011-08-17 12:40+0200\n"
-"PO-Revision-Date: 2010-11-05 10:58+0000\n"
+"PO-Revision-Date: 2011-08-27 15:20+0000\n"
 "Last-Translator: Claudio Arseni <claudio.arseni@gmail.com>\n"
 "Language-Team: Italian <it@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2011-08-18 04:39+0000\n"
-"X-Generator: Launchpad (build 13697)\n"
+"X-Launchpad-Export-Date: 2011-08-28 05:19+0000\n"
+"X-Generator: Launchpad (build 13794)\n"
 
 #: GTG/gtk/deletion.glade.h:1
 msgid "Confirm task deletion"
@@ -56,7 +56,7 @@ msgstr "Preferenze di Getting Things GNOME!"
 
 #: GTG/gtk/preferences.glade.h:9
 msgid "Hide closed tasks older than "
-msgstr ""
+msgstr "Mostra attività chiuse più vecchie di "
 
 #: GTG/gtk/preferences.glade.h:10
 msgid "Plugins"
@@ -64,7 +64,7 @@ msgstr "Plugin"
 
 #: GTG/gtk/preferences.glade.h:11
 msgid "Show description preview in the task list."
-msgstr ""
+msgstr "Mostra anteprima della descrizione nell'elenco delle attività."
 
 #: GTG/gtk/preferences.glade.h:12
 msgid "Start Getting Things GNOME! on every login"
@@ -76,7 +76,7 @@ msgstr "I_nformazioni sul plugin"
 
 #: GTG/gtk/preferences.py:38
 msgid "Click on a plugin to get a description here."
-msgstr ""
+msgstr "Fare clic su un plugin per visualizzare qui la descrizione."
 
 #: GTG/gtk/delete_dialog.py:63
 msgid ""
@@ -84,25 +84,29 @@ msgid ""
 msgid_plural ""
 "Deleting a task cannot be undone, and will delete the following task: "
 msgstr[0] ""
+"L'eliminazione di un'attività non può essere annullata. Verranno eliminate "
+"le seguenti attività: "
 msgstr[1] ""
+"L'eliminazione di un'attività non può essere annullata. Verrà eliminata la "
+"seguente attività: "
 
 #: GTG/gtk/delete_dialog.py:68
 msgid "Are you sure you want to delete these tasks?"
 msgid_plural "Are you sure you want to delete this task?"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Eliminare veramente queste attività?"
+msgstr[1] "Eliminare veramente questa attività?"
 
 #: GTG/gtk/delete_dialog.py:74
 msgid "Keep selected tasks"
 msgid_plural "Keep selected task"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Mantieni attività selezionate"
+msgstr[1] "Mantieni attività selezionata"
 
 #: GTG/gtk/delete_dialog.py:77
 msgid "Permanently remove tasks"
 msgid_plural "Permanently remove task"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Rimuovi definitivamente le attività"
+msgstr[1] "Rimuovi definitivamente l'attività"
 
 #: GTG/gtk/delete_dialog.py:108
 #, python-format
@@ -110,30 +114,32 @@ msgid ""
 "\n"
 "And %d more tasks"
 msgstr ""
+"\n"
+"E altre %d attività"
 
 #: GTG/gtk/backends_dialog/parameters_ui/passwordui.py:50
 msgid "Password:"
-msgstr ""
+msgstr "Password:"
 
 #: GTG/gtk/backends_dialog/parameters_ui/pathui.py:52
 msgid "Filename:"
-msgstr ""
+msgstr "Nome file:"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:63
 msgid "Import tags"
-msgstr ""
+msgstr "Importa etichette"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:64
 msgid "All tags"
-msgstr ""
+msgstr "Tutte le etichette"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:65
 msgid "Just these tags"
-msgstr ""
+msgstr "Solo queste etichette"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:69
 msgid "Tags to sync"
-msgstr ""
+msgstr "Etichette da sincronizzare"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:70
 #: GTG/core/treefactory.py:79
@@ -142,11 +148,11 @@ msgstr "Tutte le attività"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:71
 msgid "Tasks with these tags"
-msgstr ""
+msgstr "Attività con queste etichette"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:76
 msgid "Username"
-msgstr ""
+msgstr "Nome utente"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:82
 msgid "Import tasks from @ replies "
@@ -154,33 +160,33 @@ msgstr ""
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:87
 msgid "Import tasks from direct messages"
-msgstr ""
+msgstr "Importa attività dai messaggi diretti"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:91
 msgid "Import tasks from your tweets"
-msgstr ""
+msgstr "Importa attività dai propri tweet"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:95
 msgid "Tag your GTG tasks with the bug tags"
-msgstr ""
+msgstr "Etichetta le attività di GTG con le etichette del bug"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:99
 msgid "Tag your GTG tasks with the project targeted by the bug"
-msgstr ""
+msgstr "Etichetta le attività di GTG con il progetto relativo al bug"
 
 #: GTG/gtk/backends_dialog/parameters_ui/periodui.py:51
 msgid "Check for new tasks every"
-msgstr ""
+msgstr "Controllare nuove attività ogni"
 
 #: GTG/gtk/backends_dialog/parameters_ui/periodui.py:96
 msgid " minute"
 msgid_plural " minutes"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] " minuto"
+msgstr[1] " minuti"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:162
 msgid "Ready to start syncing"
-msgstr ""
+msgstr "Pronto per avviare la sincronizzazione"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:164
 #, python-format
@@ -192,7 +198,7 @@ msgstr[1] ""
 #: GTG/gtk/backends_dialog/configurepanel.py:169
 #, python-format
 msgid "There's no task tagged %s"
-msgstr ""
+msgstr "Non ci sono attività con l'etichetta %s"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:171
 #, python-format
@@ -203,35 +209,35 @@ msgstr[1] ""
 
 #: GTG/gtk/backends_dialog/configurepanel.py:182
 msgid "Disable syncing"
-msgstr ""
+msgstr "Disabilita sincronizzazione"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:184
 msgid "Enable syncing"
-msgstr ""
+msgstr "Abilita sincronizzazione"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:192
 msgid "This is the default backend"
-msgstr ""
+msgstr "Questo è il backend predefinito"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:195
 msgid "Syncing is enabled"
-msgstr ""
+msgstr "Sincronizzazione abilitata"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:197
 #: GTG/gtk/backends_dialog/addpanel.py:177
 msgid "Syncing is <span color=\"red\">disabled</span>"
-msgstr ""
+msgstr "Sincronizzazione <span color=\"red\">disabilitata</span>"
 
 #: GTG/gtk/backends_dialog/addpanel.py:183
 msgid "Author"
 msgid_plural "Authors"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Autore"
+msgstr[1] "Autori"
 
 #: GTG/gtk/backends_dialog/__init__.py:287
 #, python-format
 msgid "Do you really want to remove the backend '%s'?"
-msgstr ""
+msgstr "Rimuovere veramente il backend \"%s\"?"
 
 #: GTG/gtk/editor/taskeditor.glade.h:1
 msgid "Closed on"
@@ -268,7 +274,7 @@ msgstr "Adesso"
 
 #: GTG/gtk/editor/taskeditor.glade.h:9
 msgid "Someday"
-msgstr ""
+msgstr "Un giorno"
 
 #: GTG/gtk/editor/taskeditor.glade.h:10
 msgid "Soon"
@@ -541,7 +547,7 @@ msgstr "_Nuova attività"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:33
 msgid "Open GTG documentation in your web browser"
-msgstr ""
+msgstr "Aprire la documentazione di GTG nel browser web"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:34
 msgid "Redo"
@@ -553,7 +559,7 @@ msgstr "Ripristina colore"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:36
 msgid "Set due date"
-msgstr ""
+msgstr "Imposta data di scadenza"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:37
 msgid "T_oolbar"
@@ -570,7 +576,7 @@ msgstr "Etichette"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:40
 msgid "Tasks"
-msgstr ""
+msgstr "Attività"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:41
 msgid "Und_ismiss"
@@ -610,7 +616,7 @@ msgstr "_Inserimento rapido attività"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:50
 msgid "_Set start date"
-msgstr ""
+msgstr "Impo_sta data di inizio"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:51
 msgid "_Tags Sidebar"
@@ -630,23 +636,23 @@ msgstr "_Scaletta di lavoro"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:55
 msgid "_clear due date"
-msgstr ""
+msgstr "_Cancella data di scadenza"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:56
 msgid "_clear start date"
-msgstr ""
+msgstr "_Cancella data di inizio"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:57
 msgid "_later"
-msgstr ""
+msgstr "D_opo"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:58
 msgid "_now"
-msgstr ""
+msgstr "O_ra"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:59
 msgid "_soon"
-msgstr ""
+msgstr "Pr_esto"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:60
 msgid "_tomorrow"
@@ -698,11 +704,11 @@ msgstr "Visualizza solo le attività eseguibili ora"
 
 #: GTG/gtk/browser/__init__.py:47
 msgid "Hide this tag from the workview"
-msgstr ""
+msgstr "Nascondi l'etichetta dalla scaletta di lavoro"
 
 #: GTG/gtk/browser/__init__.py:48
 msgid "Show this tag in the workview"
-msgstr ""
+msgstr "Mostra questa etichetta nella scaletta di lavoro"
 
 #: GTG/gtk/browser/custominfobar.py:36
 #, python-format
@@ -710,36 +716,42 @@ msgid ""
 "The <b>%s</b> backend cannot login with the supplied authentication data and "
 "has been disabled. To retry the login, re-enable the backend."
 msgstr ""
+"Il backend <b>%s</b> non può effettuare l'accesso con i dati di "
+"autenticazione forniti ed è stato disabilitato. Per effettuare un nuovo "
+"tentativo di accesso, abilitare nuovamente il backend."
 
 #: GTG/gtk/browser/custominfobar.py:40
 #, python-format
 msgid "Due to a network problem, I cannot contact the <b>%s</b> backend."
 msgstr ""
+"A causa di un problema di rete non è possibile contattare il backend "
+"<b>%s</b>."
 
 #: GTG/gtk/browser/custominfobar.py:43
 #, python-format
 msgid "Cannot connect to DBUS, I've disabled the <b>%s</b> backend."
 msgstr ""
+"Impossibile contattare DBUS. Il backend <b>%s</b> è stato disabilitato."
 
 #: GTG/gtk/browser/custominfobar.py:105
 msgid "Configure backend"
-msgstr ""
+msgstr "Configura backend"
 
 #: GTG/gtk/browser/custominfobar.py:106
 msgid "Ignore"
-msgstr ""
+msgstr "Ignora"
 
 #: GTG/gtk/browser/custominfobar.py:114 GTG/gtk/browser/custominfobar.py:119
 msgid "Ok"
-msgstr ""
+msgstr "OK"
 
 #: GTG/gtk/browser/custominfobar.py:140
 msgid "Confirm"
-msgstr ""
+msgstr "Conferma"
 
 #: GTG/gtk/browser/custominfobar.py:142
 msgid "Continue"
-msgstr ""
+msgstr "Continua"
 
 #: GTG/gtk/browser/treeview_factory.py:316
 msgid "Start date"
@@ -751,7 +763,7 @@ msgstr "Scadenza"
 
 #: GTG/gtk/browser/treeview_factory.py:347
 msgid "Closed date"
-msgstr ""
+msgstr "Data di chiusura"
 
 #: GTG/gtk/browser/treeview_factory.py:392
 msgid "Title"
@@ -799,12 +811,12 @@ msgstr "Questa nota non esiste più. Crearla?"
 
 #: GTG/plugins/send_email/sendEmail.py:44
 msgid "Send via email"
-msgstr ""
+msgstr "Invia via email"
 
 #: GTG/plugins/send_email/sendEmail.py:69
 #, python-format
 msgid "Status: %s"
-msgstr ""
+msgstr "Stato: %s"
 
 #: GTG/plugins/send_email/sendEmail.py:70
 #, python-format
@@ -812,6 +824,8 @@ msgid ""
 "\n"
 "Tags: %s"
 msgstr ""
+"\n"
+"Etichette: %s"
 
 #: GTG/plugins/send_email/sendEmail.py:71
 #, python-format
@@ -820,6 +834,9 @@ msgid ""
 "Subtasks:\n"
 "%s"
 msgstr ""
+"\n"
+"Attività ausiliarie:\n"
+"%s"
 
 #: GTG/plugins/send_email/sendEmail.py:73
 #, python-format
@@ -828,11 +845,14 @@ msgid ""
 "Task content:\n"
 "%s"
 msgstr ""
+"\n"
+"Contenuto dell'attività:\n"
+"%s"
 
 #: GTG/plugins/send_email/sendEmail.py:76
 #, python-format
 msgid "Task: %(task_title)s"
-msgstr ""
+msgstr "Attività: %(task_title)s"
 
 #: GTG/plugins/geolocalized_tasks/geolocalized.glade.h:1
 msgid "<b>Location Determination Method</b>"
@@ -885,11 +905,11 @@ msgstr "Modello non trovato"
 #: GTG/plugins/export/export.py:121
 #, python-format
 msgid "Could not generate the document: %s"
-msgstr ""
+msgstr "Impossibile generare il documento: %s"
 
 #: GTG/plugins/export/export.py:169
 msgid "Export the tasks currently listed"
-msgstr ""
+msgstr "Esporta le attività attualmente elencate"
 
 #: GTG/plugins/export/export.py:322
 msgid "Choose where to save your list"
@@ -897,49 +917,57 @@ msgstr "Scegliere dove salvare l'elenco"
 
 #: GTG/plugins/export/export_templates/description_pocketmod.py:18
 msgid "Foldable booklet (PDF)"
-msgstr ""
+msgstr "Libretto pieghevole (PDF)"
 
 #: GTG/plugins/export/export_templates/description_pocketmod.py:19
 msgid ""
 "A template to create a <a href=\"http://www.pocketmod.com\">PocketMod</a>, "
 "which is a  small foldable booklet."
 msgstr ""
+"Un modello per creare un <a href=\"http://www.pocketmod.com\">PocketMod</a>, "
+"che è un libretto pieghevole."
 
 #: GTG/plugins/export/export_templates/description_simple.py:18
 msgid "A simple Web page (nicely printable)"
-msgstr ""
+msgstr "Una semplice pagina web (facilmente stampabile)"
 
 #: GTG/plugins/export/export_templates/description_simple.py:19
 msgid ""
 "A template to create a simple HTML page with some tasks. It can be printed "
 "nicely."
 msgstr ""
+"Un modello per creare una semplice pagina HTML con alcune attività. Può "
+"essere facilmente stampata."
 
 #: GTG/plugins/export/export_templates/description_sexy.py:18
 msgid "A professional-looking HTML page"
-msgstr ""
+msgstr "Una pagina HTML dall'aspetto professionale"
 
 #: GTG/plugins/export/export_templates/description_sexy.py:19
 msgid ""
 "A template to create a HTML page with some tasks and tags. Tags colors are "
 "also displayed."
 msgstr ""
+"Un modello per creare una pagina HTML con alcune attività e alcune "
+"etichette. Verranno mostrati anche colori delle etichette."
 
 #: GTG/plugins/export/export_templates/description_textual.py:18
 msgid "Text-only"
-msgstr ""
+msgstr "Solo testo"
 
 #: GTG/plugins/export/export_templates/description_textual.py:19
 msgid "A template to create a simple text file with some tasks."
-msgstr ""
+msgstr "Un modello per creare un semplice file di testo con alcune attività."
 
 #: GTG/plugins/export/export_templates/description_statusrpt.py:18
 msgid "Status report"
-msgstr ""
+msgstr "Rapporto sullo stato"
 
 #: GTG/plugins/export/export_templates/description_statusrpt.py:19
 msgid "A template to create a compact text file listing only task titles."
 msgstr ""
+"Un modello per creare un file di testo compatto che elenca solo i titoli "
+"delle attività."
 
 #: GTG/plugins/hamster/hamster.py:154
 msgid "Start task in Hamster"
@@ -963,7 +991,7 @@ msgstr "GTG è già in esecuzione."
 
 #: GTG/backends/backend_rtm.py:54
 msgid "Remember The Milk"
-msgstr ""
+msgstr "Remember The Milk"
 
 #: GTG/backends/backend_rtm.py:58
 msgid ""
@@ -973,10 +1001,15 @@ msgid ""
 "Note: This product uses the Remember The Milk API but is not endorsed or "
 "certified by Remember The Milk"
 msgstr ""
+"Questo backend sincronizza le attività con il servizio web RememberTheMilk:\n"
+"\t\thttp://rememberthemilk.com\n"
+"\n"
+"Nota: questo prodotto utilizza le API di Remember The Milk ma non è né "
+"approvato ufficialmente né certificato da Remember The Milk"
 
 #: GTG/backends/backend_tomboy.py:41
 msgid "Tomboy"
-msgstr ""
+msgstr "Tomboy"
 
 #: GTG/backends/backend_tomboy.py:45
 msgid ""
@@ -985,10 +1018,14 @@ msgid ""
 "tag it with the tag you have chosen (you'll configure it later), and it will "
 "appear in GTG."
 msgstr ""
+"Questo backend può sincronizzare in GTG tutte o una parte delle note "
+"presenti in Tomboy. Se si decide che sarebbe comodo avere una nota "
+"nell'elenco delle cose da fare, aggiungere alla nota l'etichetta scelta (che "
+"verrà configurata in seguito) e comparirà in GTG."
 
 #: GTG/backends/backend_launchpad.py:53
 msgid "Launchpad"
-msgstr ""
+msgstr "Launchpad"
 
 #: GTG/backends/backend_launchpad.py:57
 msgid ""
@@ -1005,26 +1042,38 @@ msgid ""
 "subtasks...): your  changes will be preserved. This is useful to add  "
 "personal annotations to bug"
 msgstr ""
+"Questo backend consente di importare in GTG i bug assegnati all'utente su "
+"Launchpad. Appena lo stato del bug cambia in Launchpad, l'attività in GTG "
+"viene aggiornata.\n"
+"Notare che questo è un backend in sola lettura. Questo significa che se si "
+"apre una delle attività importate e si cambia uno dei seguenti valori:\n"
+"  - titolo\n"
+"  - descrizione\n"
+"  - etichette\n"
+"i cambiamenti <b>verranno</b> cancellati quando il bug associato sarà "
+"modificato. A parte questo, è possibile impostare qualunque altro campo "
+"(data di inizio e fine, attività ausiliarie....) e i cambiamenti verranno "
+"conservati. Questo è molto utile per aggiungere annotazioni personali ai bug"
 
 #: GTG/backends/backend_launchpad.py:244
 msgid "Bug"
-msgstr ""
+msgstr "Bug"
 
 #: GTG/backends/backend_launchpad.py:324
 msgid "Reported by: "
-msgstr ""
+msgstr "Segnalato da: "
 
 #: GTG/backends/backend_launchpad.py:329
 msgid "Link to bug: "
-msgstr ""
+msgstr "Collegamento al bug: "
 
 #: GTG/backends/backend_twitter.py:54
 msgid "Twitter"
-msgstr ""
+msgstr "Twitter"
 
 #: GTG/backends/backend_twitter.py:58
 msgid "Imports your twitter  messages into your GTG "
-msgstr ""
+msgstr "Importare i propri messaggi di twitter in GTG "
 
 #: GTG/backends/rtm/rtm.py:53
 msgid "Invalid state"
@@ -1032,23 +1081,24 @@ msgstr "Stato non valido"
 
 #: GTG/backends/backend_identica.py:54
 msgid "Identi.ca"
-msgstr ""
+msgstr "Identi.ca"
 
 #: GTG/backends/backend_identica.py:58
 msgid "Imports your identi.ca  messages into your GTG "
-msgstr ""
+msgstr "Importare i propri messaggi di identi.ca in GTG "
 
 #: GTG/backends/backend_localfile.py:61
 msgid "Local File"
-msgstr ""
+msgstr "File locale"
 
 #: GTG/backends/backend_localfile.py:66
 msgid "Your tasks are saved in a text file (XML format). "
 msgstr ""
+"Le attività sono state salvate in un file di testo (in formato XML). "
 
 #: GTG/backends/backend_gnote.py:42
 msgid "Gnote"
-msgstr ""
+msgstr "Gnote"
 
 #: GTG/backends/backend_gnote.py:46
 msgid ""
@@ -1057,14 +1107,18 @@ msgid ""
 "tag it with the tag you have chosen (you'll configure it later), and it will "
 "appear in GTG."
 msgstr ""
+"Questo backend può sincronizzare in GTG tutte o una parte delle note "
+"presenti in Gnote. Se si decide che sarebbe comodo avere una nota "
+"nell'elenco delle cose da fare, aggiungere alla nota l'etichetta scelta (che "
+"verrà configurata in seguito) e comparirà in GTG."
 
 #: GTG/backends/backend_evolution.py:69
 msgid "Evolution tasks"
-msgstr ""
+msgstr "Attività di Evolution"
 
 #: GTG/backends/backend_evolution.py:73
 msgid "Lets you synchronize your GTG tasks with Evolution tasks"
-msgstr ""
+msgstr "Consente di sincronizzare le attività di GTG con quelle di Evolution"
 
 #: GTG/core/firstrun_tasks.py:8
 msgid "Getting started with GTG"
