Launchpad automatic translations update.

--- a/po/hr.po
+++ b/po/hr.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2011-08-17 12:40+0200\n"
-"PO-Revision-Date: 2011-09-11 11:07+0000\n"
+"PO-Revision-Date: 2011-09-12 22:22+0000\n"
 "Last-Translator: Saša Teković <Unknown>\n"
 "Language-Team: Croatian <hr@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -16,8 +16,8 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2011-09-12 04:54+0000\n"
-"X-Generator: Launchpad (build 13900)\n"
+"X-Launchpad-Export-Date: 2011-09-13 04:47+0000\n"
+"X-Generator: Launchpad (build 13910)\n"
 
 #: GTG/gtk/deletion.glade.h:1
 msgid "Confirm task deletion"
@@ -211,8 +211,8 @@ msgstr "Nema zadataka s oznakom %s"
 msgid "Syncing a task tagged %s"
 msgid_plural "Syncing %d tasks tagged %s"
 msgstr[0] ""
-msgstr[1] "Sinkronizacija %d zadatka s oznakom %s"
-msgstr[2] "Sinkronizacija %d zadataka s oznakom %s"
+msgstr[1] "Sinkronizacija %d zadatka označenih sa %s"
+msgstr[2] "Sinkronizacija %d zadataka označenih sa %s"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:182
 msgid "Disable syncing"
