--- a/AUTHORS
+++ b/AUTHORS
@@ -77,3 +77,4 @@ For 0.3:
 * Madhumitha Viswanathan <madhuvishy@gmail.com>
 * Fabio Prina <fabio@nimsh.com>
 * François <https://launchpad.net/~unpeudescience> (no email provided)
+* Marcos Lenharo <https://launchpad.net/~lenharo-h> (no email provided)
