--- a/po/gl.po
+++ b/po/gl.po
@@ -5,15 +5,15 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-08-17 12:40+0200\n"
-"PO-Revision-Date: 2010-11-25 09:31+0000\n"
-"Last-Translator: Dario <dario.villar.v@gmail.com>\n"
+"PO-Revision-Date: 2011-09-25 18:45+0000\n"
+"Last-Translator: Miguel Anxo Bouzada <mbouzada@gmail.com>\n"
 "Language-Team: Galego <g11n@mancomun.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2011-08-18 04:38+0000\n"
-"X-Generator: Launchpad (build 13697)\n"
+"X-Launchpad-Export-Date: 2011-09-26 04:46+0000\n"
+"X-Generator: Launchpad (build 14012)\n"
 "Language: gl\n"
 
 #: GTG/gtk/deletion.glade.h:1
@@ -54,7 +54,7 @@ msgstr "Preferencias de Getting Things GNOME!"
 
 #: GTG/gtk/preferences.glade.h:9
 msgid "Hide closed tasks older than "
-msgstr ""
+msgstr "Agochar tarefas pechadas anteriores a "
 
 #: GTG/gtk/preferences.glade.h:10
 msgid "Plugins"
@@ -62,7 +62,7 @@ msgstr "Engadidos"
 
 #: GTG/gtk/preferences.glade.h:11
 msgid "Show description preview in the task list."
-msgstr ""
+msgstr "Mostrar vista previa da descrición na lista de tarefas."
 
 #: GTG/gtk/preferences.glade.h:12
 msgid "Start Getting Things GNOME! on every login"
@@ -74,7 +74,7 @@ msgstr "_Sobre o engadido"
 
 #: GTG/gtk/preferences.py:38
 msgid "Click on a plugin to get a description here."
-msgstr ""
+msgstr "Prema nun engadido para ver a descrición"
 
 #: GTG/gtk/delete_dialog.py:63
 msgid ""
@@ -82,25 +82,29 @@ msgid ""
 msgid_plural ""
 "Deleting a task cannot be undone, and will delete the following task: "
 msgstr[0] ""
+"Non é posíbel desfacer a eliminación dunha tarefa,  e vaise eliminar a "
+"seguinte: "
 msgstr[1] ""
+"Non é posíbel desfacer a eliminación dunha tarefa,  e vanse eliminar as "
+"seguintes: "
 
 #: GTG/gtk/delete_dialog.py:68
 msgid "Are you sure you want to delete these tasks?"
 msgid_plural "Are you sure you want to delete this task?"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Está seguro que quere eliminar esa tarefa?"
+msgstr[1] "Está seguro que quere eliminar esas tarefas?"
 
 #: GTG/gtk/delete_dialog.py:74
 msgid "Keep selected tasks"
 msgid_plural "Keep selected task"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Manter a tarefa seleccionada"
+msgstr[1] "Manter as tarefas seleccionadas"
 
 #: GTG/gtk/delete_dialog.py:77
 msgid "Permanently remove tasks"
 msgid_plural "Permanently remove task"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Eliminar permanentemente a tarefa"
+msgstr[1] "Eliminar permanentemente as tarefas"
 
 #: GTG/gtk/delete_dialog.py:108
 #, python-format
@@ -108,30 +112,32 @@ msgid ""
 "\n"
 "And %d more tasks"
 msgstr ""
+"\n"
+"E %d tarefas máis"
 
 #: GTG/gtk/backends_dialog/parameters_ui/passwordui.py:50
 msgid "Password:"
-msgstr ""
+msgstr "Contrasinal:"
 
 #: GTG/gtk/backends_dialog/parameters_ui/pathui.py:52
 msgid "Filename:"
-msgstr ""
+msgstr "Nome do ficheiro:"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:63
 msgid "Import tags"
-msgstr ""
+msgstr "Importar etiquetas"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:64
 msgid "All tags"
-msgstr ""
+msgstr "Todas as etiquetas"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:65
 msgid "Just these tags"
-msgstr ""
+msgstr "Só estas etiquetas"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:69
 msgid "Tags to sync"
-msgstr ""
+msgstr "Etiquetas a sincronizar"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:70
 #: GTG/core/treefactory.py:79
@@ -140,11 +146,11 @@ msgstr "Todas as tarefas"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:71
 msgid "Tasks with these tags"
-msgstr ""
+msgstr "Tarefas con estas etiquetas"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:76
 msgid "Username"
-msgstr ""
+msgstr "Nome de usuario"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:82
 msgid "Import tasks from @ replies "
@@ -156,7 +162,7 @@ msgstr ""
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:91
 msgid "Import tasks from your tweets"
-msgstr ""
+msgstr "Importar farefas dende os teus chíos"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:95
 msgid "Tag your GTG tasks with the bug tags"
@@ -168,44 +174,44 @@ msgstr ""
 
 #: GTG/gtk/backends_dialog/parameters_ui/periodui.py:51
 msgid "Check for new tasks every"
-msgstr ""
+msgstr "Comproba se hai novas tarefas cada"
 
 #: GTG/gtk/backends_dialog/parameters_ui/periodui.py:96
 msgid " minute"
 msgid_plural " minutes"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] " minuto"
+msgstr[1] " minutos"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:162
 msgid "Ready to start syncing"
-msgstr ""
+msgstr "Listo para comezar a sincronización"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:164
 #, python-format
 msgid "Syncing your only task"
 msgid_plural "Syncing all %d tasks"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Sincronizando a súa única tarefa"
+msgstr[1] "Sicronizando todas as %d tarefas"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:169
 #, python-format
 msgid "There's no task tagged %s"
-msgstr ""
+msgstr "Non hai ningunha tarefa coa etiqueta %s"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:171
 #, python-format
 msgid "Syncing a task tagged %s"
 msgid_plural "Syncing %d tasks tagged %s"
 msgstr[0] ""
-msgstr[1] ""
+msgstr[1] "Sincronizando %d tarefas coa etiqueta %s"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:182
 msgid "Disable syncing"
-msgstr ""
+msgstr "Desactivar a sincronización"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:184
 msgid "Enable syncing"
-msgstr ""
+msgstr "Activar a sincronización"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:192
 msgid "This is the default backend"
@@ -213,18 +219,18 @@ msgstr ""
 
 #: GTG/gtk/backends_dialog/configurepanel.py:195
 msgid "Syncing is enabled"
-msgstr ""
+msgstr "Sincronización activada"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:197
 #: GTG/gtk/backends_dialog/addpanel.py:177
 msgid "Syncing is <span color=\"red\">disabled</span>"
-msgstr ""
+msgstr "Sincronización <span color=\"red\">desactivada</span>"
 
 #: GTG/gtk/backends_dialog/addpanel.py:183
 msgid "Author"
 msgid_plural "Authors"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Autor"
+msgstr[1] "Autores"
 
 #: GTG/gtk/backends_dialog/__init__.py:287
 #, python-format
@@ -266,7 +272,7 @@ msgstr "Agora"
 
 #: GTG/gtk/editor/taskeditor.glade.h:9
 msgid "Someday"
-msgstr ""
+msgstr "Algún día"
 
 #: GTG/gtk/editor/taskeditor.glade.h:10
 msgid "Soon"
@@ -535,7 +541,7 @@ msgstr "Nova _tarefa"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:33
 msgid "Open GTG documentation in your web browser"
-msgstr ""
+msgstr "Abrir a documentación de GTG no seu navegador"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:34
 msgid "Redo"
@@ -564,7 +570,7 @@ msgstr "Etiquetas"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:40
 msgid "Tasks"
-msgstr ""
+msgstr "Tarefas"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:41
 msgid "Und_ismiss"
@@ -604,7 +610,7 @@ msgstr "En_gadir entrada rápida"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:50
 msgid "_Set start date"
-msgstr ""
+msgstr "_Establecer a data de inicio"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:51
 msgid "_Tags Sidebar"
@@ -628,19 +634,19 @@ msgstr ""
 
 #: GTG/gtk/browser/taskbrowser.glade.h:56
 msgid "_clear start date"
-msgstr ""
+msgstr "_limpar a data de inicio"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:57
 msgid "_later"
-msgstr ""
+msgstr "_máis tarde"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:58
 msgid "_now"
-msgstr ""
+msgstr "_agora"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:59
 msgid "_soon"
-msgstr ""
+msgstr "_logo"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:60
 msgid "_tomorrow"
@@ -721,19 +727,19 @@ msgstr ""
 
 #: GTG/gtk/browser/custominfobar.py:106
 msgid "Ignore"
-msgstr ""
+msgstr "Ingnorar"
 
 #: GTG/gtk/browser/custominfobar.py:114 GTG/gtk/browser/custominfobar.py:119
 msgid "Ok"
-msgstr ""
+msgstr "Aceptar"
 
 #: GTG/gtk/browser/custominfobar.py:140
 msgid "Confirm"
-msgstr ""
+msgstr "Confirmar"
 
 #: GTG/gtk/browser/custominfobar.py:142
 msgid "Continue"
-msgstr ""
+msgstr "Continuar"
 
 #: GTG/gtk/browser/treeview_factory.py:316
 msgid "Start date"
@@ -793,12 +799,12 @@ msgstr "Esta nota de Tomboy xa non existe. Desexa creala?"
 
 #: GTG/plugins/send_email/sendEmail.py:44
 msgid "Send via email"
-msgstr ""
+msgstr "Enviar por correo electrónico"
 
 #: GTG/plugins/send_email/sendEmail.py:69
 #, python-format
 msgid "Status: %s"
-msgstr ""
+msgstr "Estado: %s"
 
 #: GTG/plugins/send_email/sendEmail.py:70
 #, python-format
@@ -806,6 +812,8 @@ msgid ""
 "\n"
 "Tags: %s"
 msgstr ""
+"\n"
+"Etiquetas: %s"
 
 #: GTG/plugins/send_email/sendEmail.py:71
 #, python-format
@@ -814,6 +822,9 @@ msgid ""
 "Subtasks:\n"
 "%s"
 msgstr ""
+"\n"
+"Subtarefas:\n"
+"%s"
 
 #: GTG/plugins/send_email/sendEmail.py:73
 #, python-format
@@ -822,11 +833,14 @@ msgid ""
 "Task content:\n"
 "%s"
 msgstr ""
+"\n"
+"Contido da tarefa:\n"
+"%s"
 
 #: GTG/plugins/send_email/sendEmail.py:76
 #, python-format
 msgid "Task: %(task_title)s"
-msgstr ""
+msgstr "Tarefa: %(task_title)s"
 
 #: GTG/plugins/geolocalized_tasks/geolocalized.glade.h:1
 msgid "<b>Location Determination Method</b>"
@@ -879,11 +893,11 @@ msgstr "Modelo non atopado"
 #: GTG/plugins/export/export.py:121
 #, python-format
 msgid "Could not generate the document: %s"
-msgstr ""
+msgstr "Non foi posíbel xerar o documento: %s"
 
 #: GTG/plugins/export/export.py:169
 msgid "Export the tasks currently listed"
-msgstr ""
+msgstr "Exportar as tarefas que están a lista"
 
 #: GTG/plugins/export/export.py:322
 msgid "Choose where to save your list"
@@ -957,7 +971,7 @@ msgstr "gtg xa se está executando!"
 
 #: GTG/backends/backend_rtm.py:54
 msgid "Remember The Milk"
-msgstr ""
+msgstr "Acórdate do leite"
 
 #: GTG/backends/backend_rtm.py:58
 msgid ""
@@ -970,7 +984,7 @@ msgstr ""
 
 #: GTG/backends/backend_tomboy.py:41
 msgid "Tomboy"
-msgstr ""
+msgstr "Tomboy"
 
 #: GTG/backends/backend_tomboy.py:45
 msgid ""
@@ -982,7 +996,7 @@ msgstr ""
 
 #: GTG/backends/backend_launchpad.py:53
 msgid "Launchpad"
-msgstr ""
+msgstr "Launchpad"
 
 #: GTG/backends/backend_launchpad.py:57
 msgid ""
@@ -1002,7 +1016,7 @@ msgstr ""
 
 #: GTG/backends/backend_launchpad.py:244
 msgid "Bug"
-msgstr ""
+msgstr "Fallo"
 
 #: GTG/backends/backend_launchpad.py:324
 msgid "Reported by: "
@@ -1014,11 +1028,11 @@ msgstr ""
 
 #: GTG/backends/backend_twitter.py:54
 msgid "Twitter"
-msgstr ""
+msgstr "Twitter"
 
 #: GTG/backends/backend_twitter.py:58
 msgid "Imports your twitter  messages into your GTG "
-msgstr ""
+msgstr "Importa as súas mensaxes de twitter no seu GTG "
 
 #: GTG/backends/rtm/rtm.py:53
 msgid "Invalid state"
@@ -1026,15 +1040,15 @@ msgstr "Estado incorrecto"
 
 #: GTG/backends/backend_identica.py:54
 msgid "Identi.ca"
-msgstr ""
+msgstr "Identi.ca"
 
 #: GTG/backends/backend_identica.py:58
 msgid "Imports your identi.ca  messages into your GTG "
-msgstr ""
+msgstr "Importa as súas mensaxes de identi.ca no seu GTG "
 
 #: GTG/backends/backend_localfile.py:61
 msgid "Local File"
-msgstr ""
+msgstr "Ficheiro local"
 
 #: GTG/backends/backend_localfile.py:66
 msgid "Your tasks are saved in a text file (XML format). "
@@ -1042,7 +1056,7 @@ msgstr ""
 
 #: GTG/backends/backend_gnote.py:42
 msgid "Gnote"
-msgstr ""
+msgstr "Gnote"
 
 #: GTG/backends/backend_gnote.py:46
 msgid ""
@@ -1054,7 +1068,7 @@ msgstr ""
 
 #: GTG/backends/backend_evolution.py:69
 msgid "Evolution tasks"
-msgstr ""
+msgstr "Tarefas do Evolution"
 
 #: GTG/backends/backend_evolution.py:73
 msgid "Lets you synchronize your GTG tasks with Evolution tasks"
