--- a/po/fr.po
+++ b/po/fr.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2011-08-17 12:40+0200\n"
-"PO-Revision-Date: 2011-10-12 18:47+0000\n"
-"Last-Translator: Quentin Pagès <Unknown>\n"
+"PO-Revision-Date: 2011-10-18 14:09+0000\n"
+"Last-Translator: Dominick Rivard <Unknown>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Launchpad-Export-Date: 2011-10-13 04:39+0000\n"
-"X-Generator: Launchpad (build 14124)\n"
+"X-Launchpad-Export-Date: 2011-10-19 05:54+0000\n"
+"X-Generator: Launchpad (build 14157)\n"
 
 #: GTG/gtk/deletion.glade.h:1
 msgid "Confirm task deletion"
@@ -76,7 +76,7 @@ msgstr "À _propos du greffon"
 
 #: GTG/gtk/preferences.py:38
 msgid "Click on a plugin to get a description here."
-msgstr ""
+msgstr "Cliquer sur un plugiciel afin d'obtenir la description."
 
 #: GTG/gtk/delete_dialog.py:63
 msgid ""
