A few usability improvements by Jean-François Fortin Tam

--- a/AUTHORS
+++ b/AUTHORS
@@ -83,3 +83,4 @@ For 0.2.9:
 * Alayn Gortazar <zutoin@gmail.com>
 * Erin McLaughlin <emclaughlin1215@gmail.com>
 * João Ascenso <joaoricardoascenso@gmail.com>
+* Jean-François Fortin Tam <nekohayo@gmail.com>
