Launchpad automatic translations update.

--- a/po/it.po
+++ b/po/it.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2011-08-17 12:40+0200\n"
-"PO-Revision-Date: 2011-08-27 15:20+0000\n"
+"PO-Revision-Date: 2011-11-28 16:10+0000\n"
 "Last-Translator: Claudio Arseni <claudio.arseni@gmail.com>\n"
 "Language-Team: Italian <it@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2011-08-28 05:19+0000\n"
-"X-Generator: Launchpad (build 13794)\n"
+"X-Launchpad-Export-Date: 2011-11-29 05:27+0000\n"
+"X-Generator: Launchpad (build 14399)\n"
 
 #: GTG/gtk/deletion.glade.h:1
 msgid "Confirm task deletion"
@@ -156,7 +156,7 @@ msgstr "Nome utente"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:82
 msgid "Import tasks from @ replies "
-msgstr ""
+msgstr "Importa attività da @ risposte "
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:87
 msgid "Import tasks from direct messages"
@@ -192,8 +192,8 @@ msgstr "Pronto per avviare la sincronizzazione"
 #, python-format
 msgid "Syncing your only task"
 msgid_plural "Syncing all %d tasks"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Sincronizza solo la propria attività"
+msgstr[1] "Sincronizza tutte le %d attività"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:169
 #, python-format
@@ -1422,6 +1422,36 @@ msgid ""
 "\n"
 "If a word begins with @, it is interpreted as a tag."
 msgstr ""
+"L'inserimento rapido delle attività è il modo più rapido per aggiungere "
+"nuovi compiti. È possibile mostrarle o nasconderle dal menù Visualizza.\n"
+"\n"
+"Per aggiungere un'attività basta digitarne il titolo nel campo di "
+"inserimento e premere invio. L'attività verrà creata e selezionata "
+"nell'esploratore delle attività. Se viene selezionata un'etichetta nel "
+"relativo pannello, questa etichetta viene applicata all'attività appena "
+"creata.\n"
+"\n"
+"È inoltre possibile attività con gli attributi \"tags\", \"due\" e \"defer\" "
+"nella finestra di inserimento rapido delle attività: La sintassi per questi "
+"attributi è:\n"
+"\n"
+"etichette:etichetta1,etichetta2etichetta3\n"
+" - In questo modo è possibile aggiungere tutte le etichette necessarie "
+"separate da virgole\n"
+"\n"
+"due:data\n"
+"defer:data\n"
+" - In questo modo è possibile aggiungere una scadenza o posticipare le "
+"attività. La data dev'essere nel formato yyyy-mm-dd (per esempio 2011-04-01) "
+"o yyyymmdd (20110401) oppure mmdd (0401, in questo caso l'anno è "
+"implicitamente considerato come quello attuale) oppure oggi o domani o il "
+"nome di uno dei giorni della settimana (due:lunedì imposterà come scadenza "
+"il lunedì successivo).\n"
+"\n"
+"Gli attributi aggiunti in quest modo verranno applicati ma non compariranno "
+"nel titolo.\n"
+"\n"
+"Se una parola inizia con @ viene considerata come un'etichetta."
 
 #: GTG/core/plugins/__init__.py:32
 msgid "Everything necessary to run this plugin is available."
