Correct name for D-Bus service, thanks to Nicolas Maitre for patch

--- a/AUTHORS
+++ b/AUTHORS
@@ -85,3 +85,4 @@ For 0.2.9:
 * João Ascenso <joaoricardoascenso@gmail.com>
 * Jean-François Fortin Tam <nekohayo@gmail.com>
 * Richard Klein <kleinric@gmail.com>
+* Nicolas Maître <https://launchpad.net/~nmaitre> (no email provided)
